errors.txt
main.cpp:4:11: error: extended character “ is not valid in an identifier
    4 | cp::print(“At Rs. 50 per ice cream, three ice creams cost:”);
      |           ^
main.cpp:4:59: error: extended character ” is not valid in an identifier
    4 | cp::print(“At Rs. 50 per ice cream, three ice creams cost:”);
      |                                                           ^
main.cpp: In function 'int main()':
main.cpp:4:11: error: '“At' was not declared in this scope
    4 | cp::print(“At Rs. 50 per ice cream, three ice creams cost:”);
      |           ^~~
main.cpp:4:37: error: 'three' was not declared in this scope
    4 | cp::print(“At Rs. 50 per ice cream, three ice creams cost:”);
      |                                     ^~~~~
